# gh-specify-finder

./: .gitignore  CHANGELOG.md  README.md  ideas.md  pyproject.toml
examples/: ejemplo-resultados.json
matched_repos/: repos.csv  repositories.csv  resultados.csv
scripts/: cron_buscar.sh
src/gh_specify_finder/: __init__.py  cli.py  criteria.py  export.py  gh_client.py  models.py  parser.py
tests/: test_cli.py  test_export.py  test_parser.py
